feat(labels): Labels can now be defined per project
